--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -6,3 +6,62 @@ input[type="checkbox"]  {
   width: 16px;
   height: 16px;
 }
+
+.asbw-stickybag-widget {
+  position: absolute !important;  
+}
+
+.desktop-view .asbw-stickybag-widget {  
+
+}
+
+.mobile-view .asbw-stickybag-widget { 
+
+}
+.mobile-view .hide-mobile {
+  display: none !important;
+}
+
+.mobile-view .asbw-stickybag-widget {
+  padding: 10px !important;
+}
+
+.mobile-view .asbw-stickybag-widget.asbw-boxed {
+  margin: 0;
+  border-radius: 0;
+}
+
+.mobile-view #widget-container {
+  flex-direction: column;
+}
+
+.mobile-view .asbw-stickybag-product {
+  max-width: 100%;
+  margin-bottom: 10px;
+}
+
+.mobile-view .asbw-stickybag-widget-events {
+  flex-direction: column;
+  width: 100%;
+}
+
+.mobile-view .asbw-stickybag-options {
+  width: 100%;
+  margin-bottom: 12px;
+  gap: 5px;
+}
+
+.mobile-view .asbw-stickybag-options>div {
+  margin-left: 0;
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
+.mobile-view .asbw-stickybag-actions {
+  margin-left: 0;
+  width: 100%;
+}
+
+.mobile-view .asbw-stickybag-action-wrapper {
+  flex-grow: 1;
+}
