--- a/src/style/app.css
+++ b/src/style/app.css
@@ -215,3 +215,29 @@ span.flatpickr-weekday,
 [x-cloak] {
   display: none !important;
 }
+
+/* Custom slider switch*/
+
+.slider:before {
+  content: "";
+  @apply absolute w-6 h-6 rounded-full bg-white transition-all delay-200 ease-in-out  left-1 bottom-1 ring-1 ring-slate-950/20;  
+}
+
+.switch-slider-wrap input:checked + .slider {
+  @apply bg-green-600 ring-1 ring-green-700
+}
+
+.switch-slider-wrap .slider span.status-text.active {
+  @apply hidden
+}
+ .switch-slider-wrap input:checked ~ .slider span.status-text:not(.active) {
+  @apply hidden
+} 
+.switch-slider-wrap input:checked ~ .slider span.status-text.active {
+  @apply block ml-2
+  }
+.switch-slider-wrap input:checked + .slider:before {
+  -webkit-transform: translateX(28px);
+  -ms-transform: translateX(28px);
+  transform: translateX(28px);
+}
