--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -68,3 +68,10 @@ input[type="color"]::-webkit-color-swatch {
 .mobile-view .asbw-stickybag-action-wrapper {
   flex-grow: 1;
 }
+
+@media (max-width:2090px) {
+  .desktop-view .asbw-stickybag-widget.asbw-boxed {
+    margin-right: 15px !important;
+    margin-left: 15px !important;
+}
+}
