--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -75,3 +75,37 @@ input[type="color"]::-webkit-color-swatch {
     margin-left: 15px !important;
 }
 }
+
+@media (max-width:768px) { 
+  .desktop-view #widget-container {
+    flex-direction: inherit !important;
+}
+.desktop-view .asbw-stickybag-widget.asbw-boxed {
+    margin-right: 15px !important;
+    margin-left: 15px !important;
+    margin-top: 12px !important;
+    margin-bottom: 12px !important;
+    border-radius: 10px !important;
+  }
+  .desktop-view .asbw-stickybag-product {
+    max-width: 50% !important;
+  }
+  .desktop-view .asbw-stickybag-widget-events {
+    flex-direction: inherit !important;
+    width: auto !important;
+}
+.desktop-view .asbw-stickybag-options {
+  width: auto !important;
+  margin-bottom: 0 !important;
+  gap: 0 !important;
+}
+.desktop-view .asbw-stickybag-options>div {
+  margin-left: 12px !important;
+  flex-grow: 0 !important;
+  flex-basis: 0 !important;
+}
+.desktop-view .asbw-stickybag-actions {
+  margin-left: 12px !important;
+  width: auto !important;
+}
+}
