--- a/src/style/app.css
+++ b/src/style/app.css
@@ -262,6 +262,42 @@ table td {
   @apply hidden
 } */
 
+/* .sidebar-nav-panel {
+  @apply max-w-15 hover:max-w-67 w-full transition-all ease-in absolute left-0 top-0 z-9999 flex h-screen flex-col overflow-y-hidden bg-black duration-300 2xl:static 2xl:translate-x-0
+} */
+.widget-page {
+  @apply pl-14
+}
+.sidebar-nav-panel {
+  @apply max-w-15 hover:max-w-67 w-full transition-all ease-in fixed left-0 top-0 z-9999 flex h-screen flex-col overflow-y-hidden bg-black duration-100
+}
+.sidebar-nav-panel
+.nav-link {
+  @apply px-3
+}
+.sidebar-nav-panel .nav-link .nav-title {
+  @apply hidden whitespace-nowrap
+}
+.sidebar-nav-panel:hover .nav-link .nav-title {
+  @apply flex
+}
+.nav-label {
+  @apply hidden
+}
+
+.nav-bottom-block {
+  @apply hidden
+}
+.logo-full {
+  @apply hidden
+}
+.sidebar-nav-panel:hover .logo-full {
+  @apply flex
+}
+.sidebar-nav-panel:hover .logo-icon {
+  @apply hidden
+}
+
 .card {
   @apply rounded-md bg-white p-4 border border-stroke shadow-sm mb-3
 }
