--- a/src/style/app.css
+++ b/src/style/app.css
@@ -252,6 +252,10 @@ table td {
   @apply px-4 py-3
 }
 
+.main {
+@apply pl-16 2xl:pl-67
+}
+
 /* Navigation  */
 /* .sidebar-nav-panel {
   @apply group-[]:
@@ -265,38 +269,51 @@ table td {
 /* .sidebar-nav-panel {
   @apply max-w-15 hover:max-w-67 w-full transition-all ease-in absolute left-0 top-0 z-9999 flex h-screen flex-col overflow-y-hidden bg-black duration-300 2xl:static 2xl:translate-x-0
 } */
-.widget-page {
-  @apply pl-14
-}
 .sidebar-nav-panel {
-  @apply max-w-15 hover:max-w-67 w-full transition-all ease-in fixed left-0 top-0 z-9999 flex h-screen flex-col overflow-y-hidden bg-black duration-100
+  @apply w-full max-w-67 transition-all ease-in fixed left-0 top-0 z-9999 flex h-screen flex-col overflow-y-hidden bg-black duration-100
 }
-.sidebar-nav-panel
-.nav-link {
+.sidebar-nav-panel .nav-link {
   @apply px-3
 }
-.sidebar-nav-panel .nav-link .nav-title {
-  @apply hidden whitespace-nowrap
+
+
+
+.widget-page {
+  @apply pl-16
 }
-.sidebar-nav-panel:hover .nav-link .nav-title {
-  @apply flex
+.widget-page .main {
+  @apply pl-0
 }
-.nav-label {
-  @apply hidden
+.widget-page .sidebar-nav-panel {
+  @apply  max-w-16 hover:max-w-67
 }
 
-.nav-bottom-block {
+.widget-page .sidebar-nav-panel .nav-link .nav-title {
+  @apply hidden whitespace-nowrap
+}
+
+.widget-page .nav-label,
+.widget-page .nav-bottom-block {
   @apply hidden
 }
-.logo-full {
-  @apply hidden
-}
-.sidebar-nav-panel:hover .logo-full {
+.widget-page  .sidebar-nav-panel:hover .nav-bottom-block,
+.widget-page .sidebar-nav-panel:hover .nav-link .nav-title {
   @apply flex
 }
-.sidebar-nav-panel:hover .logo-icon {
-  @apply hidden
+.widget-page .logo {
+  @apply w-10 overflow-hidden
 }
+.widget-page .sidebar-nav-panel:hover .logo {
+  @apply w-auto
+}
+.widget-page .logo-full {
+  @apply max-w-max
+}
+
+
+/* .widget-page .sidebar-nav-panel:hover .logo-icon {
+  @apply hidden
+} */
 
 .card {
   @apply rounded-md bg-white p-4 border border-stroke shadow-sm mb-3
