--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -28,22 +28,21 @@ input[type="color"]::-webkit-color-swatch {
   display: none !important;
 }
 
-.mobile-view .cpatc-widget {
-  padding: 10px !important;
-}
 
 .mobile-view .cpatc-widget.cpatc-boxed {
   margin: 0;
   border-radius: 0;
 }
 
-.mobile-view #widget-container {
+.mobile-view #widget-content {
   flex-direction: column;
+  padding: 10px;
 }
 
 .mobile-view .cpatc-product {
   max-width: 100%;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 .mobile-view .cpatc-widget-events {
@@ -71,22 +70,22 @@ input[type="color"]::-webkit-color-swatch {
 .mobile-view .cpatc-action-wrapper {
   flex-grow: 1;
 }
+.desktop-view .cpatc-widget.cpatc-boxed {  
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
-@media (max-width:2090px) {
-  .desktop-view .cpatc-widget.cpatc-boxed {
-    margin-right: 15px !important;
-    margin-left: 15px !important;
-  }
+.desktop-view .cpatc-widget.cpatc-boxed #widget-container {
+  max-width: 992px;
 }
 
 @media (max-width:768px) {
-  .desktop-view #widget-container {
+  .desktop-view #widget-content {
     flex-direction: inherit !important;
   }
 
   .desktop-view .cpatc-widget.cpatc-boxed {
-    margin-right: 15px !important;
-    margin-left: 15px !important;
+    
     margin-top: 12px !important;
     margin-bottom: 12px !important;
     border-radius: 10px !important;
