--- a/src/style/app.css
+++ b/src/style/app.css
@@ -328,11 +328,15 @@ table td {
 .block-label {
   @apply text-black w-full mb-1 block
 }
+.block-form-control,
+.block-select-control {
+@apply font-medium border border-stroke  focus:border-black text-black text-sm
+}
 .block-form-control {
-  @apply w-full rounded border border-stroke py-2 px-3 font-medium text-black focus:border-black focus-visible:outline-none bg-input-color;
+  @apply w-full rounded py-2 px-3    focus-visible:outline-none bg-input-color;
 }
 .block-select-control {
-  @apply relative text-graydark z-20 w-full appearance-none rounded border font-medium border-stroke bg-transparent py-1 pl-3 pr-10 outline-none transition focus:border-black active:border-black;  
+  @apply relative z-20 w-full appearance-none rounded bg-transparent py-1 pl-3 pr-10 outline-none transition active:border-black;
 }
 .custom-radio {
   @apply block relative pl-9 mb-4 select-none cursor-pointer text-black font-medium
@@ -359,4 +363,23 @@ table td {
 }
 .custom-radio .checkmark:after {
   @apply bg-primary rounded-full w-2.5 h-2.5;
+}
+.cpatc-pw-label input[type="radio"]:checked ~ .cpatc-pw-btn {
+@apply bg-input-color border-black shadow-sm
+}
+
+.accordion-item {
+  @apply rounded-md bg-white border border-stroke shadow-sm mb-3 relative
+}
+.accordion-item .accordion-icon {
+@apply flex transform absolute right-3 top-5
+}
+.accordion-item input[type="checkbox"]:checked ~ .accordion-icon {
+  @apply -rotate-90
+  }
+  .accordion-item .accordion-content {
+  @apply block
+}
+.accordion-item input[type="checkbox"]:checked ~ .accordion-content {
+  @apply hidden
 }
