--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -81,6 +81,7 @@ input[type="color"]::-webkit-color-swatch {
 .mobile-view .cpatc-widget.cpatc-fixed-d-bottom.cpatc-boxed {
   margin-bottom: 0;
 }
+
 @media (max-width:768px) {
   .desktop-view #widget-content {
     flex-direction: inherit !important;
@@ -119,4 +120,40 @@ input[type="color"]::-webkit-color-swatch {
     width: auto !important;
   }
   
+}
+
+/* Toaster */
+
+.colored-toast.swal2-icon-success {
+  background-color: #48a481 !important;
+}
+
+.colored-toast.swal2-icon-error {
+  background-color: #f63e3e !important;
+}
+
+.colored-toast.swal2-icon-warning {
+  background-color: #f8bb86 !important;
+}
+
+.colored-toast.swal2-icon-info {
+  background-color: #3fc3ee !important;
+}
+
+.colored-toast.swal2-icon-question {
+  background-color: #87adbd !important;
+}
+
+.colored-toast .swal2-title {
+  color: white;
+}
+
+.colored-toast .swal2-close {
+  color: white;
+}
+
+.colored-toast .swal2-html-container {
+  color: white;
+  font-size: 20px !important;
+  font-weight: 500;
 }
