--- a/src/style/app.css
+++ b/src/style/app.css
@@ -201,3 +201,10 @@
 .header-light {
   @apply bg-transparent
 }
+
+.screen-holder {
+  background: rgba(255,255,255,0.19);
+}
+.bg-gradient {
+  background-image: linear-gradient(45deg, #FFFBF2, #EDFFFD);
+}
