--- a/src/style/app.css
+++ b/src/style/app.css
@@ -208,3 +208,14 @@
 .bg-gradient {
   background-image: linear-gradient(45deg, #FFFBF2, #EDFFFD);
 }
+@keyframes jump {
+  0%   {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+  40%  {-webkit-transform: translate3d(0,20px,0);transform: translate3d(0,20px,0);}
+  100% {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+}
+
+@keyframes jumpTwo {
+  0%   {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+  40%  {-webkit-transform: translate3d(0,-20px,0);transform: translate3d(0,-20px,0);}
+  100% {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+}
