--- a/src/style/app.css
+++ b/src/style/app.css
@@ -56,6 +56,30 @@
     }
   }
 
+  /* Animations */
+  
+@keyframes jump {
+  0%   {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+  40%  {-webkit-transform: translate3d(0,20px,0);transform: translate3d(0,20px,0);}
+  100% {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+}
+
+@keyframes jumpTwo {
+  0%   {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+  40%  {-webkit-transform: translate3d(0,-20px,0);transform: translate3d(0,-20px,0);}
+  100% {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+}
+
+@-webkit-keyframes rotated {
+  0%   {-webkit-transform: rotate(0);transform: rotate(0);}
+  100% {-webkit-transform: rotate(360deg);transform: rotate(360deg);}
+}
+
+@-webkit-keyframes rotatedTwo {
+  0%   {-webkit-transform: rotate(0);transform: rotate(0);}
+  100% {-webkit-transform: rotate(-360deg);transform: rotate(-360deg);}
+}
+
   .section-head-light {
 
     p,
@@ -207,15 +231,4 @@
 }
 .bg-gradient {
   background-image: linear-gradient(45deg, #FFFBF2, #EDFFFD);
-}
-@keyframes jump {
-  0%   {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
-  40%  {-webkit-transform: translate3d(0,20px,0);transform: translate3d(0,20px,0);}
-  100% {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
-}
-
-@keyframes jumpTwo {
-  0%   {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
-  40%  {-webkit-transform: translate3d(0,-20px,0);transform: translate3d(0,-20px,0);}
-  100% {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
 }
